--- a/hardest-snake-game/login-signup.html
+++ b/hardest-snake-game/login-signup.html
@@ -5,6 +5,14 @@
         <meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+        <script>
+            var clientIp;
+            $.getJSON("https://api.ipify.org?format=json", function(data){
+                clientIp = data.ip;
+            });
+        </script>
+
         <style>
             * {
                 margin: 0;
@@ -119,20 +127,20 @@
             <div class="form-box">
                 <div class="button-box">
                     <div id="btns-background"></div>
-                    <button type="button" class="toggle-btn" onclick="login()">Log in</button>
-                    <button type="button" class="toggle-btn" onclick="signup()">Sign up</button>
+                    <button type="button" class="toggle-btn" onclick="select_login()">Log in</button>
+                    <button type="button" class="toggle-btn" onclick="select_signup()">Sign up</button>
                 </div>
-                <form class="input-group" id="login-form" action="#" method="POST">
-                    <input type="text" class="input-field" placeholder="Username" required>
-                    <input type="password" class="input-field" placeholder="Password" required>
-                    <input type="checkbox" class="check-box"><span>Remember me</span>
-                    <button type="submit" class="submit-btn">Log in</button>
+                <form class="input-group" id="login-form" action="">
+                    <input type="text" class="input-field" name="username" placeholder="Username" required>
+                    <input type="password" class="input-field" name="password" placeholder="Password" required>
+                    <input type="checkbox" class="check-box" name="remember me"><span>Remember me</span>
+                    <button type="button" class="submit-btn" onclick="login()">Log in</button>
                 </form>
-                <form class="input-group" id="signup-form" action="#" method="POST">
-                    <input type="text" class="input-field" placeholder="Username" required>
-                    <input type="text" class="input-field" placeholder="Email" id="email-input">
-                    <input type="password" class="input-field" placeholder="Password" required>
-                    <button type="submit" class="submit-btn">Sign up</button>
+                <form class="input-group" id="signup-form" action="">
+                    <input type="text" class="input-field" name="username" placeholder="Username" required>
+                    <input type="text" class="input-field" name="email" placeholder="Email" id="email-input">
+                    <input type="password" class="input-field" name="password" placeholder="Password" required>
+                    <button type="button" class="submit-btn" onclick="signup()">Sign up</button>
                     <br><br>
                     <label for="email-input">Email is not required but is needed if you forgot password and want to request change!</label>
                 </form>
@@ -146,18 +154,53 @@
 
             var urlParams = new URLSearchParams(window.location.search);
             if(urlParams.get("form") === "signup"){
-                signup();
+                select_signup();
             }
 
-            function login(){
+            function select_login(){
                 login_form.style.left = "50px";
                 signup_form.style.left = "450px";
                 btns_background.style.left = "0px";
             }
-            function signup(){
+            function select_signup(){
                 login_form.style.left = "-400px";
                 signup_form.style.left = "50px";
                 btns_background.style.left = "110px";
+            }
+
+            function login(){
+                $.ajax({
+                    type: 'post',
+                    url: 'https://hardest-snake-game-test.jelka33.repl.co/login-user',
+                    data: $('#login-form').serialize() + '&ip=' + clientIp,
+                    success: function(data){
+                        console.log(data);
+                        if(data.msg == "Logged in"){
+                            window.localStorage.setItem('hsgProfileToken', data.token);
+                            $.each($('#login-form').serializeArray(), function(i, field){
+                                if(field.name == "username")
+                                    window.localStorage.setItem('hsgProfileUsername', field.value);
+                            });
+                        }
+                    }
+                });
+            }
+            function signup(){
+                $.ajax({
+                    type: 'post',
+                    url: 'https://hardest-snake-game-test.jelka33.repl.co/signup-user',
+                    data: $('#signup-form').serialize() + '&ip=' + clientIp,
+                    success: function(data){
+                        console.log(data);
+                        if(data.msg == "Signed up successfully"){
+                            window.localStorage.setItem('hsgProfileToken', data.token);
+                            $.each($('#signup-form').serializeArray(), function(i, field){
+                                if(field.name == "username")
+                                    window.localStorage.setItem('hsgProfileUsername', field.value);
+                            });
+                        }
+                    }
+                });
             }
         </script>
     </body>
