Moved game webpage to this host and updated leaderboard and main page

--- a/hardest-snake-game/index.html
+++ b/hardest-snake-game/index.html
@@ -69,20 +69,20 @@
             }
         </style>
     </head>
-    <body style="margin:0">
+    <body style="margin:0; background-color: black;">
         <div class="top-nav-bar">
             <a href="login-signup.html?form=signup" id="signup-btn"><button>Sign up</button></a>
             <a href="login-signup.html" id="login-btn"><button>Log in</button></a>
             <a href="leaderboard.html"><button>Leaderboard</button></a>
         </div>
         <div class="beggining-img-container">
-            <img class="beggining-img" src="images/beggining-img.png" alt="" width="100%">
+            <!--<img class="beggining-img" src="images/beggining-img.png" alt="" width="100%">-->
             <div class="beggining-subcontainer">
                 <h1>Hardest Snake Game</h1>
                 <p class="beggining-game-description">Smaller snake, bigger terrain<br>every food adds wall</p>
                 <div style="height: 100px; width: 80%; margin: 50px auto 0; display: flex; justify-content: space-between;">
-                    <a href="https://hardest-snake-game.jelka33.repl.co"><button>Play Now</button></a>
-                    <a href="https://hardest-snake-game.jelka33.repl.co"><button style="vertical-align: top;">View Code<br>on Github</button></a>
+                    <a href="game.html"><button>Play Now</button></a>
+                    <a href="#"><button style="vertical-align: top;">View Code<br>on Github</button></a>
                 </div>
             </div>
         </div>
