Updated Hardest Snake Game:  - Added 'How to play' on main page  - Made main page responsive  - Some other minor changes

--- a/hardest-snake-game/game.html
+++ b/hardest-snake-game/game.html
@@ -30,7 +30,7 @@
                 top: 15%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                font-size: 85px;
+                font-size: 9.072vh;
                 z-index: 1;
             }
 
@@ -39,7 +39,7 @@
                 top: 25%;
                 left: 50%;
                 transform: translate(-50%, -50%);
-                font-size: 85px;
+                font-size: 9.072vh;
                 z-index: 1;
             }
 			
@@ -192,7 +192,7 @@
 				left: 7%;
 				transform: translate(-50%, -50%);
 				width: 5.208%;
-				height: 4.63%;
+				height: 5.336%;
 				z-index: 1;
 			}
 			
