Updated copyright notice in footer of Hardest Snake Game page

--- a/hardest-snake-game/index.html
+++ b/hardest-snake-game/index.html
@@ -125,6 +125,11 @@
                 justify-content: space-between;
             }
 
+            .copyright-notice {
+                padding: 10px 0 0;
+                text-align: center;
+            }
+
             @media only screen and (max-width: 480px) {
                 h1 {
                     font-size: 9vw;
@@ -266,7 +271,8 @@
                 </div>
             </div>
             <div class="copyright-notice">
-                <p>Hello, I own this website, you can use code freely :)</p>
+                <p>Copyright &copy; 2022, Jelka33<br>All rights reserved.
+                    <br><br>For more information read <a href="https://jelka33.github.io/hardest-snake-game/LICENSE.txt">license</a>.</p>
             </div>
         </div>
         <script>
