--- a/hardest-snake-game/account-info.html
+++ b/hardest-snake-game/account-info.html
@@ -7,6 +7,16 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-BDXDQC3273"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-BDXDQC3273');
+        </script>
+
         <style>
             * {
                 font-family: Arial, Helvetica, sans-serif;
@@ -18,17 +28,17 @@
                 text-align: center;
             }
 
-            button {
-                width: 10.417vw;
-                height: 10.672vh;
+            .button {
+                width: 5vw;
+                height: 3vw;
                 background-color: white;
                 border: none;
-                font-size: 1.04vw;
+                font-size: 1vw;
                 font-weight: bold;
                 transition: 0.4s;
             }
 
-            button:hover {
+            .button:hover {
                 background-color: gray;
                 color: white;
             }
@@ -44,11 +54,15 @@
 
                 float: right;
                 background-color: gray;
+                border: none;
                 font-size: 15px;
+                font-weight: bold;
+                transition: 0.4s;
             }
 
             .top-nav-bar button:hover {
                 background-color: rgb(70, 70, 70);
+                color: white;
             }
 
             .acc-holder {
@@ -80,18 +94,31 @@
                 opacity: 1;
             }
 
-            input[type="button"] {
-                width: 60px;
-                height: 20px;
-                background-color: white;
-                border: none;
-                font-size: 14px;
-                transition: 0.4s;
-            }
+            @media only screen and (max-width: 480px) {
+                .top-nav-bar button {
+                    font-size: 3.125vw;
+                }
 
-            input[type="button"]:hover {
-                background-color: gray;
-                color: white;
+                .button {
+                    width: 50vw;
+                    height: 10vw;
+                    font-size: 5vw;
+                    margin: 5px 0 0;
+                }
+
+                .acc-holder {
+                    width: 100%;
+                    height: 100%;
+                    top: 55vh;
+                    left: 50%;
+                    margin: 0;
+                    padding: 0;
+                }
+
+                .form {
+                    margin: 0 100px;
+                    width: auto;
+                }
             }
         </style>
     </head>
@@ -104,16 +131,16 @@
         </div>
         <div class="acc-holder">
             <p style="font-size: 30px; text-align: center;">Account info</p>
-            <form action="">
+            <form class="form" action="">
                 <label for="">Username: <label for="" id="username-label">a</label></label>
                 <br>
                 <input type="text" class="input-field" name="username" id="username-input" placeholder="New username">
-                <input type="button" onclick="changeUsername()" value="Change">
+                <input type="button" class="button" onclick="changeUsername()" value="Change">
                 <br><br><br>
                 <label for="">Email: <label for="" id="email-label">a</label></label>
                 <br>
                 <input type="text" class="input-field" name="email" id="email-input" placeholder="New email">
-                <input type="button" onclick="changeEmail()" value="Change">
+                <input type="button" class="button" onclick="changeEmail()" value="Change">
                 <br><br><br>
                 <label for="">Password</label>
                 <br>
@@ -121,7 +148,7 @@
                 <br><br>
                 <input type="text" class="input-field" name="new-password" id="newpassword-input" placeholder="New password">
                 <br><br>
-                <input type="button" onclick="changePassword()" value="Change">
+                <input type="button" class="button" onclick="changePassword()" value="Change">
             </form>
         </div>
         <script>
@@ -155,7 +182,7 @@
                 objData.username = window.localStorage.getItem('hsgProfileUsername');
                 objData.token = window.localStorage.getItem('hsgProfileToken');
                 objData.type = 'username';
-                objData.newusername = document.getElementById('username-input');
+                objData.newusername = document.getElementById('username-input').value;
 
                 $.ajax({
                     type: 'post',
@@ -178,7 +205,7 @@
                 objData.username = window.localStorage.getItem('hsgProfileUsername');
                 objData.token = window.localStorage.getItem('hsgProfileToken');
                 objData.type = 'email';
-                objData.newemail = document.getElementById('email-input');
+                objData.newemail = document.getElementById('email-input').value;
 
                 $.ajax({
                     type: 'post',
@@ -200,8 +227,8 @@
                 objData.username = window.localStorage.getItem('hsgProfileUsername');
                 objData.token = window.localStorage.getItem('hsgProfileToken');
                 objData.type = 'password';
-                objData.oldpassword = document.getElementById('oldpassword-input');
-                objData.newpassword = document.getElementById('newpassword-input');
+                objData.oldpassword = document.getElementById('oldpassword-input').value;
+                objData.newpassword = document.getElementById('newpassword-input').value;
 
                 $.ajax({
                     type: 'post',
