--- a/hardest-snake-game/game.html
+++ b/hardest-snake-game/game.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Hardest Snake Game</title>
+		<title>Hardest Snake Game | Game</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		
